k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: plausible
spec:
  type: NodePort
  # selector:
  #   app: plausible
  ports:
    - port: 8000
      name: http
