k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: plausible
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - secretName: plausible-tls
      hosts:
        - plausible.alexos.dev
  rules:
    - host: plausible.alexos.dev
      http:
        paths:
          - path: /
            backend:
              serviceName: plausible
              servicePort: 8000
    - host: plausible.alexos.dev
      http:
        paths:
          - path: /
            backend:
              serviceName: plausible
              servicePort: 8000
